--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
     "cross-env": "^7.0.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.1",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^4.1.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
@@ -98,5 +99,8 @@
   },
   "jest": {
     "testURL": "http://localhost/"
+  },
+  "peerDependencies": {
+    "eslint-plugin-n": "^15.0.0"
   }
 }
