--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "test": "npm run build && cross-env NODE_ENV=test jest && npm run lint",
+    "test": "pnpm build && jest",
     "start": "babel-node -- src/cli/bin db.json -r routes.json",
     "lint": "eslint . --ignore-path .gitignore",
     "fix": "npm run lint -- --fix",
@@ -43,9 +43,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.18.2",
     "@babel/node": "^7.12.6",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-env": "^7.18.2",
     "cross-env": "^7.0.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -57,7 +57,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^4.1.0",
     "husky": "^8.0.0",
-    "jest": "^28.0.0",
+    "jest": "^28.1.1",
     "markdown-toc": "^1.2.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
@@ -95,10 +95,7 @@
   },
   "homepage": "https://github.com/typicode/json-server",
   "engines": {
-    "node": ">=14"
-  },
-  "jest": {
-    "testURL": "http://localhost/"
+    "node": ">=14.17"
   },
   "peerDependencies": {
     "eslint-plugin-n": "^15.0.0"
