add: typescript config with es module support
- adding typescript support
- adding es module support
- adding semver for checking node version
- adding read-pkg-up for reading package.json

--- a/package.json
+++ b/package.json
@@ -2,19 +2,26 @@
   "name": "json-server",
   "version": "0.17.0",
   "description": "Get a full fake REST API with zero coding in less than 30 seconds",
-  "main": "./lib/server/index.js",
-  "bin": "./lib/cli/bin.js",
+  "main": "./lib/csj/server/index.js",
+  "module": "./lib/esm/server/index.js",
+  "types": "./lib/esm/server/index.d.ts",
+  "bin": "./lib/cjs/cli/bin.js",
   "files": [
     "lib",
     "public"
   ],
   "scripts": {
     "prepare": "husky install",
-    "test": "pnpm build && jest",
+    "test": "jest",
     "start": "babel-node -- src/cli/bin db.json -r routes.json",
     "lint": "eslint . --ignore-path .gitignore",
     "fix": "npm run lint -- --fix",
-    "build": "babel src -d lib",
+    "prebuild": "rimraf lib",
+    "build": "pnpm build:cjs && pnpm build:esm",
+    "build:esm": "cross-env MODULES=esm babel src -d lib/esm --extensions \".ts,.js\"",
+    "build:cjs": "babel src -d lib/cjs --extensions \".ts,.js\"",
+    "build:types": "tsc --emitDeclarationOnly",
+    "postbuild": "pnpm build:types",
     "toc": "markdown-toc -i README.md",
     "postversion": "git push && git push --tags",
     "prepublish": "npm test && npm run build"
@@ -35,17 +42,23 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.23",
-    "please-upgrade-node": "^3.2.0",
     "pluralize": "^8.0.0",
+    "read-pkg-up": "^9.1.0",
+    "semver": "^7.3.7",
     "server-destroy": "^1.0.1",
     "update-notifier": "^5.1.0",
     "yargs": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.18.2",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^18.0.0",
+    "@types/semver": "^7.3.10",
+    "babel-jest": "^28.1.1",
     "cross-env": "^7.0.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -66,7 +79,9 @@
     "rimraf": "^3.0.2",
     "server-ready": "^0.3.1",
     "supertest": "^6.0.1",
-    "temp-write": "^4.0.0"
+    "temp-write": "^4.0.0",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.3"
   },
   "repository": {
     "type": "git",
