--- a/package.json
+++ b/package.json
@@ -55,8 +55,19 @@
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
+    "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.2",
+    "@types/connect": "^3.4.35",
+    "@types/cors": "^2.8.12",
+    "@types/errorhandler": "^1.5.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^28.1.1",
+    "@types/lodash": "^4.14.182",
+    "@types/lowdb": "^1.0.11",
+    "@types/method-override": "^0.0.32",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
+    "@types/pluralize": "^0.0.29",
     "@types/semver": "^7.3.10",
     "babel-jest": "^28.1.1",
     "cross-env": "^7.0.2",
