--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
 
     /* Completeness */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+
+    "typeRoots": ["./typings", "./node_modules/@types"]
   },
-  "include": ["src"]
+  "include": ["src", "typings"],
 }
